force-app/main/default/objects/Contact/fields/Account_Prio__c.field-meta.xml
<CustomField>
    <fullName>Account_Prio__c</fullName>
    <formula>text( Account.Priority__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Prio</label>
    <type>Text</type>
</CustomField>