force-app/main/default/objects/Contact/fields/Account_uB_office__c.field-meta.xml
<CustomField>
    <fullName>Account_uB_office__c</fullName>
    <formula>Text(Account.uB_Office__c)</formula>
    <label>Account uB Office</label>
    <type>Text</type>
</CustomField>