force-app/main/default/objects/Contact/fields/AccountOwnerID__c.field-meta.xml
<CustomField>
    <fullName>AccountOwnerID__c</fullName>
    <formula>Account.OwnerId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AccountOwnerID</label>
    <type>Text</type>
</CustomField>