force-app/main/default/objects/Contact/fields/Adress_Text__c.field-meta.xml
<CustomField>
    <fullName>Adress_Text__c</fullName>
    <formula>if (isblank( MailingState), &quot; &quot;, BR() &amp; MailingState)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>mailing state text as used for mail merge</inlineHelpText>
    <label>Mailing State Text</label>
    <type>Text</type>
</CustomField>