force-app/main/default/objects/Contact/fields/AssistNow_Token_Resend__c.field-meta.xml
<CustomField>
    <fullName>AssistNow_Token_Resend__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for Email Alert to resend the token.</description>
    <inlineHelpText>Used for Email Alert to resend the token.</inlineHelpText>
    <label>AssistNow Token Resend</label>
    <type>Checkbox</type>
</CustomField>