force-app/main/default/objects/Contact/fields/AssistNow_Token_To_Delete__c.field-meta.xml
<CustomField>
    <fullName>AssistNow_Token_To_Delete__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Token to be deactivated is copied to this field and sent to svc-pos-team-GLOBAL@u-blox.com</description>
    <inlineHelpText>Token to be deactivated is copied to this field and sent to svc-pos-team-GLOBAL@u-blox.com</inlineHelpText>
    <label>AssistNow Token To Delete</label>
    <length>22</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>