force-app/main/default/objects/Contact/fields/Automatic_Address_Updates_from__c.field-meta.xml
<CustomField>
    <fullName>Automatic_Address_Updates_from__c</fullName>
    <description>Interim solution until APEX code works</description>
    <formula>IF( Same_as_Account_Visiting_Address__c, &quot;Account Billing Address&quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Automatic Address Updates from</label>
    <type>Text</type>
</CustomField>