force-app/main/default/objects/Contact/fields/CB_Lime_ID__c.field-meta.xml
<CustomField>
    <fullName>CB_Lime_ID__c</fullName>
    <description>Lime (connectBlue CRM system) Contact ID. NOTE: ID is unique only within Contact (there can be the same ID number in Account or Opportunity)</description>
    <inlineHelpText>Lime (connectBlue CRM system) Contact ID. NOTE: ID is unique only within Contact (there can be the same ID number in Account or Opportunity)</inlineHelpText>
    <label>CB Lime ID</label>
    <length>16</length>
    <type>Text</type>
</CustomField>