force-app/main/default/objects/Contact/fields/CB_Pyramid_ID__c.field-meta.xml
<CustomField>
    <fullName>CB_Pyramid_ID__c</fullName>
    <description>Pyramid (connectBlue ERP system) Contact ID.</description>
    <inlineHelpText>Pyramid (connectBlue ERP system) Contact ID.</inlineHelpText>
    <label>CB Pyramid ID</label>
    <length>16</length>
    <type>Text</type>
</CustomField>