force-app/main/default/objects/Contact/fields/CDK_Update__c.field-meta.xml
<CustomField>
    <fullName>CDK_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <description>chipset development kit update</description>
    <inlineHelpText>check when contact uses the chipset development kit and needs to be informed about updates</inlineHelpText>
    <label>CDK Update</label>
    <type>Checkbox</type>
</CustomField>