force-app/main/default/objects/Contact/fields/Channel_Manager__c.field-meta.xml
<CustomField>
    <fullName>Channel_Manager__c</fullName>
    <formula>Account.New_Channel_Manager__r.FirstName&amp;&quot; &quot;&amp;Account.New_Channel_Manager__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Copied from Account</inlineHelpText>
    <label>Channel Manager</label>
    <type>Text</type>
</CustomField>