force-app/main/default/objects/Contact/fields/Channel_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Channel_Manager_Email__c</fullName>
    <description>Email of the Channel Manager, added for mass mailing of Embedded WOrld and MWC 2015.</description>
    <formula>Account.New_Channel_Manager__r.Email</formula>
    <inlineHelpText>Email of the Channel Manager</inlineHelpText>
    <label>Channel Manager Email</label>
    <type>Text</type>
</CustomField>