force-app/main/default/objects/Contact/fields/Contact_ID_formula__c.field-meta.xml
<CustomField>
    <fullName>Contact_ID_formula__c</fullName>
    <description>For Autopilot to sync the ID</description>
    <formula>Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact ID formula</label>
    <type>Text</type>
</CustomField>