force-app/main/default/objects/Contact/fields/Date_Email_Invalid__c.field-meta.xml
<CustomField>
    <fullName>Date_Email_Invalid__c</fullName>
    <inlineHelpText>Date when Email address has been defined as invalid for the last time.</inlineHelpText>
    <label>Date Email Invalid</label>
    <type>Date</type>
</CustomField>