force-app/main/default/objects/Contact/fields/Date_Prototype__c.field-meta.xml
<CustomField>
    <fullName>Date_Prototype__c</fullName>
    <label>Date Prototype</label>
    <type>Date</type>
</CustomField>