force-app/main/default/objects/Contact/fields/Distributor_Portal_Access__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Portal_Access__c</fullName>
    <formula>if( Account.Distributor_Portal__c = true, &quot;yes&quot;, &quot;no&quot;)</formula>
    <inlineHelpText>From Account: yes if the contact has access to the distributor portal</inlineHelpText>
    <label>Distributor Portal Access</label>
    <type>Text</type>
</CustomField>