force-app/main/default/objects/Contact/fields/e_EUS__c.field-meta.xml
<CustomField>
    <fullName>e_EUS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>e-EUS</label>
    <type>Checkbox</type>
</CustomField>