force-app/main/default/objects/Contact/fields/e_LULA_M__c.field-meta.xml
<CustomField>
    <fullName>e_LULA_M__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the email will be sent to the Contact with the URL to e-LULA-M (Limited Use License Agreement for Marvel) form.</description>
    <inlineHelpText>When checked, the email will be sent to the Contact with the URL to e-LULA-M (Limited Use License Agreement for Marvel) form.</inlineHelpText>
    <label>e-LULA-M</label>
    <type>Checkbox</type>
</CustomField>