force-app/main/default/objects/Contact/fields/e_LULA_N__c.field-meta.xml
<CustomField>
    <fullName>e_LULA_N__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the email will be sent to the Contact with the URL to e-LULA-N (Limited Use License Agreement for NXP) form.</description>
    <inlineHelpText>When checked, the email will be sent to the Contact with the URL to e-LULA-N (Limited Use License Agreement for NXP) form.</inlineHelpText>
    <label>e-LULA-N</label>
    <type>Checkbox</type>
</CustomField>