force-app/main/default/objects/Contact/fields/e_NDA__c.field-meta.xml
<CustomField>
    <fullName>e_NDA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the email will be sent to the Contact with the URL to e-NDA form.</description>
    <inlineHelpText>When checked, the email will be sent to the Contact with the URL to e-NDA form.</inlineHelpText>
    <label>e-NDA</label>
    <type>Checkbox</type>
</CustomField>