force-app/main/default/objects/Contact/fields/Email_address_probably_not_valid__c.field-meta.xml
<CustomField>
    <fullName>Email_address_probably_not_valid__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will be activated if the e-mail address was rejected during a campaign.
Please check the e-mail address and possibly contact the customer, then clear
the checkbox.</description>
    <inlineHelpText>Field is checked if a mass-email has been hard-bounced. If the email address of this Contact is valid, check the box &quot;Reactivate Email Address&quot; to get this corrected.</inlineHelpText>
    <label>Email invalid</label>
    <type>Checkbox</type>
</CustomField>