force-app/main/default/objects/Contact/fields/Email_Event_Attendance__c.field-meta.xml
<CustomField>
    <fullName>Email_Event_Attendance__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Updated through u-blox Portal</description>
    <inlineHelpText>Updated through u-blox Portal</inlineHelpText>
    <label>Event Attendance</label>
    <type>Checkbox</type>
</CustomField>