force-app/main/default/objects/Contact/fields/Email_Magazine__c.field-meta.xml
<CustomField>
    <fullName>Email_Magazine__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Updated through u-blox Portal</description>
    <inlineHelpText>Updated through u-blox Portal</inlineHelpText>
    <label>Magazine</label>
    <type>Checkbox</type>
</CustomField>