force-app/main/default/objects/Contact/fields/Event_email__c.field-meta.xml
<CustomField>
    <fullName>Event_email__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Receives &quot;Event email&quot; (Email Type in Campaign) by mass mail</inlineHelpText>
    <label>Event email</label>
    <type>Checkbox</type>
</CustomField>