force-app/main/default/objects/Contact/fields/Exhibition__c.field-meta.xml
<CustomField>
    <fullName>Exhibition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Exhibition</label>
    <referenceTo>Exhibition__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>