force-app/main/default/objects/Contact/fields/Finance_Responsibility__c.field-meta.xml
<CustomField>
    <fullName>Finance_Responsibility__c</fullName>
    <label>Finance Responsibility</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Investment Banker</fullName>
            </value>
            <value>
                <fullName>Analyst</fullName>
            </value>
            <value>
                <fullName>Journalist</fullName>
            </value>
            <value>
                <fullName>PR</fullName>
            </value>
            <value>
                <fullName>Portfolio manager</fullName>
            </value>
            <value>
                <fullName>Trader</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Auditor</fullName>
            </value>
            <value>
                <fullName>Consultant</fullName>
            </value>
            <value>
                <fullName>Lawyer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>