force-app/main/default/objects/Contact/fields/Financial_News__c.field-meta.xml
<CustomField>
    <fullName>Financial_News__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Financial News</label>
    <type>Checkbox</type>
</CustomField>