force-app/main/default/objects/Contact/fields/Financial_target_group__c.field-meta.xml
<CustomField>
    <fullName>Financial_target_group__c</fullName>
    <inlineHelpText>A = Major shareholder or important market maker
B = Past or actual institutional shareholder
C = All other</inlineHelpText>
    <label>Financial target group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>