force-app/main/default/objects/Contact/fields/Function__c.field-meta.xml
<CustomField>
    <fullName>Function__c</fullName>
    <description>Job title or function</description>
    <inlineHelpText>Job title or function</inlineHelpText>
    <label>Function</label>
    <length>255</length>
    <type>Text</type>
</CustomField>