force-app/main/default/objects/Contact/fields/HTML_Email__c.field-meta.xml
<CustomField>
    <fullName>HTML_Email__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>if checked, mass mailings will be sent in HTML format</inlineHelpText>
    <label>HTML Email</label>
    <type>Checkbox</type>
</CustomField>