force-app/main/default/objects/Contact/fields/If_left_new_position_or_company__c.field-meta.xml
<CustomField>
    <fullName>If_left_new_position_or_company__c</fullName>
    <description>If contact has left the company, then the new position or company shall be mentioned.</description>
    <label>If left: new position or company</label>
    <length>50</length>
    <type>Text</type>
</CustomField>