force-app/main/default/objects/Contact/fields/Information_Japan_Earthquake_Tsunami__c.field-meta.xml
<CustomField>
    <fullName>Information_Japan_Earthquake_Tsunami__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked Contacts are subscribed to receive information on possible impacts on the supply chain / deliveries from u-blox</description>
    <inlineHelpText>Checked Contacts are subscribed to receive information on possible impacts on the supply chain / deliveries from u-blox</inlineHelpText>
    <label>Information Japan Earthquake / Tsunami</label>
    <type>Checkbox</type>
</CustomField>