force-app/main/default/objects/Contact/fields/Invite_Press_Conference__c.field-meta.xml
<CustomField>
    <fullName>Invite_Press_Conference__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Made for Record Type Media</description>
    <inlineHelpText>Checked if the invitation should be sent</inlineHelpText>
    <label>Invite Press Conference</label>
    <type>Checkbox</type>
</CustomField>