force-app/main/default/objects/Contact/fields/Invite_Press_conference_finance__c.field-meta.xml
<CustomField>
    <fullName>Invite_Press_conference_finance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invite Press conference finance</label>
    <type>Checkbox</type>
</CustomField>