force-app/main/default/objects/Contact/fields/Last_Date_Email_Invalid__c.field-meta.xml
<CustomField>
    <fullName>Last_Date_Email_Invalid__c</fullName>
    <inlineHelpText>Date of previous Email Invalid flag. Set when all Email addresses are reset</inlineHelpText>
    <label>Last Date Email Invalid</label>
    <type>Date</type>
</CustomField>