force-app/main/default/objects/Contact/fields/Last_subscription_email_sent__c.field-meta.xml
<CustomField>
    <fullName>Last_subscription_email_sent__c</fullName>
    <description>Synced with hubspot. When time changes email will be triggered from hubspot.</description>
    <inlineHelpText>Synced with hubspot. When time changes email will be triggered from hubspot.</inlineHelpText>
    <label>Last subscription email sent</label>
    <type>DateTime</type>
</CustomField>