force-app/main/default/objects/Contact/fields/Lead_Converted__c.field-meta.xml
<CustomField>
    <fullName>Lead_Converted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox will set on the time of lead conversion only and hidden from the layout. Mapped in lead to contact.</description>
    <label>Lead Converted</label>
    <type>Checkbox</type>
</CustomField>