force-app/main/default/objects/Contact/fields/Lead_Source_Webform__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Webform__c</fullName>
    <description>Converted from Lead</description>
    <inlineHelpText>Converted from Lead</inlineHelpText>
    <label>Lead Source Webform</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lead_Source_Webform</valueSetName>
    </valueSet>
</CustomField>