force-app/main/default/objects/Contact/fields/Left_the_company__c.field-meta.xml
<CustomField>
    <fullName>Left_the_company__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if contact person is no longer at the designated account company
and sales want to keep this contact in case of re-appearance at a different
account.</description>
    <inlineHelpText>Contact has left the company.
If field is checked, the communication tools are automatically un-checked.</inlineHelpText>
    <label>Left Company</label>
    <type>Checkbox</type>
</CustomField>