force-app/main/default/objects/Contact/fields/Lesswire_History__c.field-meta.xml
<CustomField>
    <fullName>Lesswire_History__c</fullName>
    <description>TWiki link (VPN connection required) to data imported from Lesswire Salesforce</description>
    <inlineHelpText>TWiki link (VPN connection required) to data imported from Lesswire Salesforce</inlineHelpText>
    <label>Lesswire History</label>
    <type>Url</type>
</CustomField>