force-app/main/default/objects/Contact/fields/Marketing_Communication_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Communication_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Subscription for Marketing Communication.</description>
    <inlineHelpText>If checked, contact does not wish to receive marketing emails.</inlineHelpText>
    <label>Marketing Communication Opt Out</label>
    <type>Checkbox</type>
</CustomField>