force-app/main/default/objects/Contact/fields/MGA__c.field-meta.xml
<CustomField>
    <fullName>MGA__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Multi-GNSS AssistNow Service
Checked: The token is active or needs to be generated. If AssistNow Requested Date is empty, press button &quot;AssistNow Request&quot; to generate a new token.
Unchecked: The token will be deactivated and deleted.</inlineHelpText>
    <label>AssistNow</label>
    <type>Checkbox</type>
</CustomField>