force-app/main/default/objects/Contact/fields/MGA_Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>MGA_Requested_Date__c</fullName>
    <inlineHelpText>When the AssistNow Token has been generated</inlineHelpText>
    <label>AssistNow Requested Date</label>
    <type>DateTime</type>
</CustomField>