force-app/main/default/objects/Contact/fields/MGA_Support_Email__c.field-meta.xml
<CustomField>
    <fullName>MGA_Support_Email__c</fullName>
    <inlineHelpText>Email address to which the notification will be sent on creation/de-/re-activation of MGA token</inlineHelpText>
    <label>AssistNow Support Email</label>
    <type>Email</type>
</CustomField>