force-app/main/default/objects/Contact/fields/MGA_Support_uB_Office__c.field-meta.xml
<CustomField>
    <fullName>MGA_Support_uB_Office__c</fullName>
    <inlineHelpText>uB Office of the Contact Owner</inlineHelpText>
    <label>AssistNow Support uB Office</label>
    <length>20</length>
    <type>Text</type>
</CustomField>