force-app/main/default/objects/Contact/fields/MGA_Token__c.field-meta.xml
<CustomField>
    <fullName>MGA_Token__c</fullName>
    <caseSensitive>true</caseSensitive>
    <inlineHelpText>AssistNow Token. Generated with button &quot;AssistNow Enable&quot;.</inlineHelpText>
    <label>AssistNow Token</label>
    <length>22</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>