force-app/main/default/objects/Contact/fields/No_Distributor_News_Flash__c.field-meta.xml
<CustomField>
    <fullName>No_Distributor_News_Flash__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When checked, the contact will not receive the distributor news flash, even if he works for a distributor.</inlineHelpText>
    <label>No Distributor News Flash</label>
    <type>Checkbox</type>
</CustomField>