force-app/main/default/objects/Contact/fields/Owner_Different__c.field-meta.xml
<CustomField>
    <fullName>Owner_Different__c</fullName>
    <formula>if ( Account.OwnerId =  OwnerId , 0, 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>1 if contact owner different from account owner</inlineHelpText>
    <label>Owner Different</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>