force-app/main/default/objects/Contact/fields/PCN_Automotive_Chips__c.field-meta.xml
<CustomField>
    <fullName>PCN_Automotive_Chips__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Inform Contact about changes of automotive grade chips</inlineHelpText>
    <label>PCN Automotive Chips</label>
    <type>Checkbox</type>
</CustomField>