force-app/main/default/objects/Contact/fields/PCN_Modules_Services__c.field-meta.xml
<CustomField>
    <fullName>PCN_Modules_Services__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Inform Contact about changes (IN, PCN, EoL) of relevant products (reference to Opportunities, Orders)</inlineHelpText>
    <label>Product Notifications</label>
    <type>Checkbox</type>
</CustomField>