force-app/main/default/objects/Contact/fields/PCN_Standard_Chips__c.field-meta.xml
<CustomField>
    <fullName>PCN_Standard_Chips__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Inform Contact about changes of standard grade chips</inlineHelpText>
    <label>PCN Standard Chips</label>
    <type>Checkbox</type>
</CustomField>