force-app/main/default/objects/Contact/fields/Phone_direct__c.field-meta.xml
<CustomField>
    <fullName>Phone_direct__c</fullName>
    <description>Second phone number</description>
    <inlineHelpText>Store direct phone number under &quot;Phone&quot;, use &quot;Other Phone&quot; to store additional numbers like main number or assistant phone.</inlineHelpText>
    <label>Other Phone 2</label>
    <type>Phone</type>
</CustomField>