force-app/main/default/objects/Contact/fields/Press_Releases__c.field-meta.xml
<CustomField>
    <fullName>Press_Releases__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Subscribe to press releases</description>
    <inlineHelpText>Receives press releases by mass mail</inlineHelpText>
    <label>Press Releases</label>
    <type>Checkbox</type>
</CustomField>