force-app/main/default/objects/Contact/fields/Product_News__c.field-meta.xml
<CustomField>
    <fullName>Product_News__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Made for Record Type Media</description>
    <inlineHelpText>Checked if product-related news should be sent</inlineHelpText>
    <label>Product News</label>
    <type>Checkbox</type>
</CustomField>