force-app/main/default/objects/Contact/fields/Reactivate_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Reactivate_Email_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When Email Invalid flag is set, but email address is valid, check this box. The email address will be reactivated by the system administrator</inlineHelpText>
    <label>Reactivate Email Address</label>
    <type>Checkbox</type>
</CustomField>