force-app/main/default/objects/Contact/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Analyst</fullName>
            </value>
            <value>
                <fullName>Analyst (Report)</fullName>
            </value>
            <value>
                <fullName>Auditor</fullName>
            </value>
            <value>
                <fullName>Consultant</fullName>
            </value>
            <value>
                <fullName>Investment banker</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Portfolio manager</fullName>
            </value>
            <value>
                <fullName>Sales/Broker</fullName>
            </value>
            <value>
                <fullName>Shareholder engagement</fullName>
            </value>
            <value>
                <fullName>Trader</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>