force-app/main/default/objects/Contact/fields/Same_as_Account_Visiting_Address__c.field-meta.xml
<CustomField>
    <fullName>Same_as_Account_Visiting_Address__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Mark if the mailing address should be the same as the visiting address of the Account</inlineHelpText>
    <label>Same as Account Visiting Address</label>
    <type>Checkbox</type>
</CustomField>