force-app/main/default/objects/Contact/fields/Service_Item_1__c.field-meta.xml
<CustomField>
    <fullName>Service_Item_1__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Contact will receive a paper copy of the catalog from u-blox directly.</inlineHelpText>
    <label>Catalog</label>
    <type>Checkbox</type>
</CustomField>