force-app/main/default/objects/Contact/fields/Service_Item_2__c.field-meta.xml
<CustomField>
    <fullName>Service_Item_2__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Receives christmas card</inlineHelpText>
    <label>Christmas Card</label>
    <type>Checkbox</type>
</CustomField>