force-app/main/default/objects/Contact/fields/Service_Item_3__c.field-meta.xml
<CustomField>
    <fullName>Service_Item_3__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Receives &quot;Customer email&quot; (Email Type in Campaign) by mass mail</inlineHelpText>
    <label>Customer email</label>
    <type>Checkbox</type>
</CustomField>