force-app/main/default/objects/Contact/fields/Skype_Out__c.field-meta.xml
<CustomField>
    <fullName>Skype_Out__c</fullName>
    <formula>HYPERLINK(&quot;callto://&quot;&amp;(IF((LEN(Skype_ID__c)=0), (IF((LEN( Phone_direct__c )=0), (IF((LEN( MobilePhone )=0), (IF((LEN( Phone )=0), Null, Phone )), MobilePhone )), Phone_direct__c )), Skype_ID__c)),&quot;Skype Out&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Skype Out</label>
    <type>Text</type>
</CustomField>