force-app/main/default/objects/Contact/fields/Special_Mailing__c.field-meta.xml
<CustomField>
    <fullName>Special_Mailing__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Used for mailings to a dedicated list of contacts. Flags only set for the mailing, then reset again.</inlineHelpText>
    <label>Special Mailing</label>
    <type>Checkbox</type>
</CustomField>