force-app/main/default/objects/Contact/fields/Tel_Fax_Email_Text__c.field-meta.xml
<CustomField>
    <fullName>Tel_Fax_Email_Text__c</fullName>
    <formula>if ( isblank(Phone), &quot;&quot;,
&quot;Tel &quot; &amp; Phone + &quot;, &quot;) &amp;
if ( isblank(Fax), &quot;&quot;,
&quot;Fax &quot; &amp; Fax + &quot;, &quot;) &amp;
if ( isblank(Email), &quot;&quot;,
&quot;e-mail &quot; &amp; Email)</formula>
    <label>Tel-Fax-Email Text</label>
    <type>Text</type>
</CustomField>