force-app/main/default/objects/Contact/fields/Temp_Body__c.field-meta.xml
<CustomField>
    <fullName>Temp_Body__c</fullName>
    <label>Temp Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>