force-app/main/default/objects/Contact/fields/Temp_Subject__c.field-meta.xml
<CustomField>
    <fullName>Temp_Subject__c</fullName>
    <label>Temp Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>