force-app/main/default/objects/Contact/fields/TriggerChangeOwner__c.field-meta.xml
<CustomField>
    <fullName>TriggerChangeOwner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TriggerChangeOwner</label>
    <type>Checkbox</type>
</CustomField>